@@ -8,8 +8,8 @@ export class OrderReceiptService {
 
   constructor(private http: HttpClient) { }
 
-  getOrderReceiptById(id) {
-    return this.http.get('/api/order-receipts/' + id);
+  getOrderReceiptById(id, receiptId) {
+    return this.http.get('/api/order-receipts/?s_id=' + id + '&r_id=' + receiptId);
   }
   uploadPayslip(obj) {
     return this.http.post('/api/order-receipts/upload-payslip/' + obj._id, obj);
