@@ -7,6 +7,7 @@
 - 2020-12-26                                -
 ---------------------------------------------
 .: WSW: Feature: Invoice Module (WSW-94)
+.: WSM: Task: Prevent receiptId got brute force and customer information being exposed (WSW-98)
 
 - v1.0.1050                                 -
 ---------------------------------------------
